--- a/Armylens/index.html
+++ b/Armylens/index.html
@@ -13,6 +13,9 @@
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<!-- Go to www.addthis.com/dashboard to customize your tools -->
 	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5f8bbec071ab59fc"></script>
+	<meta property="og:title" content="prediction[0].className">
+	<meta property="og:description" content="result-message">
+	<meta property="og:image" content="mine-image">
 
 </head>
 
@@ -47,6 +50,9 @@
 
 			<!-- Social Icons -->
 			<ul class="icons">
+				<li><a href='tel:1338' id='security-link'><span class="icon solid fa-phone"> 군대신고</span></a></li>
+				<li>　</li>
+				<li><a href='tel:112' id='police-link'><span class="icon solid fa-phone"> 경찰신고</span></a></li>
 			</ul>
 
 		</div>
@@ -73,6 +79,8 @@
 						<div class="file-upload-content">
 							<img class="file-upload-image" id="mine-image" src="#" alt="your image" />
 							<p class="result-message"></p>
+							<a href='tel:1338' id='security-link'><span class="image mil"><img src="images/mil.PNG" alt="" /></span></a>
+							<a href='tel:112' id='police-link'><span class="image po"><img src="images/po.PNG" alt="" /></span></a>
 							<!-- Go to www.addthis.com/dashboard to customize your tools -->
 							<div class="addthis_inline_share_toolbox_huii"></div>
 							<div class="image-title-wrap">
